# zealous-octo-barnacle

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  hello.cpp  index.html  params.json  testMe
appveyor/: convenience.cmake  install_dependencies.bat  install_dependencies.win.sh  setMinGW.bat
cmake/Modules/: FindPoco.cmake  findPoco.cmake
travis/: install_dependencies.sh
